# SteelEngine

./: .gitignore  AI产品经理业务需求.md  CLAUDE.md  LICENSE  README.md  README_zh.md  chat-AI产品经理需求分析.txt  pyproject.toml  requirements.txt  skills.md
.github/workflows/: ci.yml  security.yml
agents/supply_chain/: exception.py  inventory.py  notification.py  router.py  routing.py
bot/: wechat_bot.py
docs/superpowers/plans/: 2026-05-23-supply-chain-agent-plan.md
docs/superpowers/specs/: 2026-05-23-supply-chain-agent-design.md
mcp_server/: mock_erp.py  mock_tms.py  mock_wms.py  server.py
skills/exception_agent/: skill.md
skills/inventory_agent/: skill.md
skills/notification_agent/: skill.md
skills/router_agent/: skill.md
skills/routing_agent/: skill.md
tests/: test_bot.py  test_exception.py  test_integration.py  test_inventory.py  test_notification.py  test_router.py  test_routing.py
